# bulletproofcoffee

./: .gitignore  LICENSE  README.md  build.gradle  settings.gradle
rust-jni/: Cargo.toml  Makefile
rust-jni/.cargo/: config.toml
rust-jni/src/: commitment.rs  lib.rs  prelude.rs  rangeproof.rs  ristretto.rs
src/main/java/dk/alexandra/bulletproofcoffee/: BulletProofException.java  Commitment.java  FFI.java  FFILoader.java  Main.java  Pair.java  Proof.java  RangeProof.java  Triple.java  Util.java
src/main/java/dk/alexandra/bulletproofcoffee/pedersen/: Blinding.java  Commitment.java  Committer.java  Generator.java  RistrettoPoint.java  Scalar.java
src/main/resources/: .gitignore
src/test/java/dk/alexandra/bulletproofcoffee/: CommitmentTest.java  RangeProofTest.java  RistrettoTest.java
