[package]
name = "java-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.1"
bulletproofs = { path="/Users/mikkel/Projects/fintech/libraries/bulletproofs" }
curve25519-dalek = { package = "curve25519-dalek-ng", version = "4.1" }
jni = "0.20.0"
merlin = "3.0.0"
rand = "0.8.5"
thiserror = "1.0.37"
